--- a/contacto.html
+++ b/contacto.html
@@ -8,8 +8,17 @@
 </head>
 <body>
 
-<div class="container">
-    <div class="contact-form">
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="acercade.html">Acerca de</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+    
+
+<div class="contenedor">
+    <div class="formulario_de_contacto">
         <h2>Formulario de Contacto</h2>
         <form>
             <label for="nombre">Nombre (requerido):</label>
