--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body></body>
 <header>
-    <h1>Julian Ignacio_Página Personal</h1>
+    <h1>Julian Ignacio Página Personal</h1>
 </header>
 
 <nav>
