--- a/acercade.html
+++ b/acercade.html
@@ -10,13 +10,14 @@
 
 <body>
     <header>
-        <h1>Julian Ignacio_Página Personal</h1>
+        <h1>Julian Ignacio Página Personal</h1>
     </header>
 
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="acercade.html">Acerca de</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
