--- a/acercade.html
+++ b/acercade.html
@@ -24,7 +24,7 @@
     <main>
         <h2>Acerca de mí</h2>
         <p>Naci en viema tengo 20 años, vivo con mis padres, estudio desarrollo web en la univercidad del CURZA y
-            tambien estudi japones privado.</p>
+            tambien estudio japones privado.</p>
         <img src="img/myFoto.jpg" alt="Julian Ignacio" width="300">
     </main>
 
