--- a/contacto.html
+++ b/contacto.html
@@ -48,6 +48,9 @@
                 <option value="Río Negro">
                 <option value="Santa Cruz">
                 <option value="Tierra del Fuego">
+                <option value="Buenos Aires">
+                <option value="La Rioja">
+                <option value="Mendoza">     
             </datalist>
 
             <label for="codigoPostal">Código Postal:</label>
