--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 
-<body></body>
+<body>
+
+</body>
 <header>
     <h1>Julian Ignacio Página Personal</h1>
 </header>
