--- a/acercade.html
+++ b/acercade.html
@@ -25,8 +25,11 @@
         <h2>Acerca de mí</h2>
         <p>Naci en viema tengo 20 años, vivo con mis padres, estudio desarrollo web en la univercidad del CURZA y
             tambien estudio japones privado.</p>
-        <img src="img/myFoto.jpg" alt="Julian Ignacio" width="300">
+        <div class="fotoj">
+            <img src="img/myFoto.jpg" alt="Julian Ignacio" width="300">
+        </div>
     </main>
+    
 
     <footer>
         <p>&copy; 2024 Julian Ignacio</p>
