--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 <main>
     <h2>Bienvenido a mi página personal</h2>
     <p>Este es el inicio de mi página personal. Aquí podrás encontrar información sobre mí.</p>
+
+    <div class="img">
+        <img src="img/japon.jpg">
+        <img src="/img/gym.jpg">
+        <img src="/img/messi.jpg">
+        <img src="/img/colapinto.jpg">
+    </div>
+
 </main>
 
 <footer>
