--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     <div class="img">
         <img src="img/japon.jpg">
-        <img src="/img/gym.jpg">
-        <img src="/img/messi.jpg">
-        <img src="/img/colapinto.jpg">
+        <img src="img/gym.jpg">
+        <img src="img/messi.jpg">
+        <img src="img/colapinto.jpg">
     </div>
 
 </main>
