--- a/contacto.html
+++ b/contacto.html
@@ -76,5 +76,60 @@
     </div>
 </div>
 
+
+<h2>Datos ingresados</h2>
+<table>
+    <thead>
+        <tr>
+            <th>Campo</th>
+            <th>Valor</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Nombre</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Apellido</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Email</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Teléfono</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Edad</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Dirección</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Provincia</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Código Postal</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Método preferido de contacto</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Tipo de suscripción</td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+
+
+
 </body>
 </html>
