--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julian ignacio</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-
 <body>
+    <header>
+        <div class="header-content">
+            <h1>Julian Ignacio Página Personal</h1>
+            <img src="img/logo_curza.jpg" alt="Logo CURZA" class="logo">
+        </div>
+    </header>
 
-</body>
-<header>
-    <h1>Julian Ignacio Página Personal</h1>
-</header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="acercade.html">Acerca de</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
 
-<nav>
-    <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="acercade.html">Acerca de</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-    </ul>
-</nav>
+    <main>
+        <h2>Bienvenido a mi página personal</h2>
+        <p>Este es el inicio de mi página personal. Aquí podrás encontrar información sobre mí.</p>
 
-<main>
-    <h2>Bienvenido a mi página personal</h2>
-    <p>Este es el inicio de mi página personal. Aquí podrás encontrar información sobre mí.</p>
+        <div class="img">
+            <img src="img/japon.jpg" alt="Japón">
+            <img src="img/gym.jpg" alt="Gimnasio">
+            <img src="img/messi.jpg" alt="Messi">
+            <img src="img/colapinto.jpg" alt="Colapinto">
+        </div>
+    </main>
 
-    <div class="img">
-        <img src="img/japon.jpg">
-        <img src="img/gym.jpg">
-        <img src="img/messi.jpg">
-        <img src="img/colapinto.jpg">
-    </div>
+    <a href="#" class="back-to-top" title="Volver arriba"></a>
 
-</main>
-
-<footer>
-    <p>&copy; 2024 Julian Ignacio</p>
-    <p>Centro Regional Universitario Zona Atlántica, Monseñor Esandi y Ayacucho. Viedma(85009), Río Negro,
-        Argentina.</p>
-</footer>
+    <footer>
+        <p>&copy; 2024 Julian Ignacio</p>
+        <p>Centro Regional Universitario Zona Atlántica, Monseñor Esandi y Ayacucho. Viedma(85009), Río Negro, Argentina.</p>
+    </footer>
 </body>
 </html>
