--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
         <p>Este es el inicio de mi página personal. Aquí podrás encontrar información sobre mí.</p>
 
         <div class="img">
+            <a href="https://www.ar.emb-japan.go.jp/itprtop_es/" target="_blank">
             <img src="img/japon.jpg" alt="Japón">
+        </a>
+        <a href="https://www.instagram.com/lionsgym.oficial/" target="_blank">
             <img src="img/gym.jpg" alt="Gimnasio">
+        </a>
+        <a href="https://messi.com/" target="_blank">
             <img src="img/messi.jpg" alt="Messi">
+        </a>
+        <a href="https://www.formula1.com/" target="_blank">
             <img src="img/colapinto.jpg" alt="Colapinto">
+        </a>
         </div>
     </main>
 
